@@ -25,6 +25,7 @@ Unreleased Version 2.2.0-pre
  * Feature: Add libera.chat link to start dialog.
  * Fix: Properly restore avatar again when reconnecting to a session on a 2.1 server. Thanks xxxx for reporting.
  * Fix: Make kinetic scrolling work in brush editor categories list.
+ * Fix: Make canvas rendering not get stuck when switching frames really quickly. Thanks Kink and Hopfel for reporting.
 
 2023-11-12 Version 2.2.0-beta.10
  * Fix: Don't deadlock on first startup. Thanks to Hail, lowontrash, FARBOL234, Dorokinyo and hamlin for reporting.
